--- a/src/app/components/organisms/nav-bar/nav-bar.component.scss
+++ b/src/app/components/organisms/nav-bar/nav-bar.component.scss
@@ -7,7 +7,7 @@
     padding: 1rem;
     position: sticky;
     top: 0;
-    z-index: 100;
+    z-index: 10;
 
     .container_navbar {
         display: flex;
